# trlab

./: .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  gex.csv  pyproject.toml  strategy.py
.kilo/plans/: async-feed-refactor.md  perpetual-feed-download-engine.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
bmad/_bmad/: config.toml  config.user.toml
db/: gex.csv
db/old/: SPXW_20201231.parquet  SPXW_20210104.parquet  SPXW_20210106.parquet  SPXW_20210108.parquet  SPXW_20210111.parquet  SPXW_20210113.parquet  SPXW_20210115.parquet  SPXW_20210119.parquet  SPXW_20210120.parquet  SPXW_20210122.parquet  SPXW_20210125.parquet  SPXW_20210127.parquet  SPXW_20210129.parquet  SPXW_20210201.parquet  SPXW_20210203.parquet  SPXW_20210205.parquet  SPXW_20210208.parquet  SPXW_20210210.parquet  SPXW_20210212.parquet  SPXW_20210216.parquet  SPXW_20210217.parquet  SPXW_20210219.parquet  SPXW_20210222.parquet  SPXW_20210224.parquet  (+2408 more)
examples/: scheduler_config.yaml  symbols.json
feed/: __init__.py  base.py  errors.py  models.py  tiingo.py  yahoo.py
misc/: GEX.md  STRATEGY.md
scheduler/: __init__.py  __main__.py  core.py  models.py
scripts/: GEX.md  PROMPT.md  backtest_spxw_0dte.py  backtest_spxw_1dte.py  gaps.py  gex_sync.py  range_correlation.py  test_gex_sync.py  test_tiingo_download.py  test_yahoo_download.py
symbols/: __init__.py  models.py
tests/: test_feed.py  test_gex_sync.py  test_scheduler.py  test_strategy.py  test_symbols.py
(+45 files in other folders)
