[project]
name = "trlab"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Cellarosi",email = "cellarosi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "yfinance (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
