[project]
name = "trlab"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Cellarosi",email = "cellarosi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "croniter (>=3.0.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "aiohttp (>=3.10.0,<4.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
]
